--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.4",
     "express-cors": "0.0.3",
     "multer": "^1.4.1",
-    "nodebatis": "^2.3.3"
+    "nodebatis": "^2.3.3",
+    "svg-captcha": "^1.3.11"
   }
 }
