--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "ExBatisPressAPI",
-  "version": "1.0.0",
+  "name": "@wolfx/express-api-server",
+  "version": "1.0.1",
   "dependencies": {
     "@types/express": "^4.16.0",
     "@types/multer": "^1.3.7",
+    "@wolfx/nodebatis": "^2.3.4",
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-polyfill": "^6.26.0",
@@ -13,7 +14,7 @@
     "express": "^4.16.4",
     "express-cors": "0.0.3",
     "multer": "^1.4.1",
-    "nodebatis": "^2.3.3",
+    "mysql": "^2.16.0",
     "svg-captcha": "^1.3.11"
   }
 }
