--- a/package.json
+++ b/package.json
@@ -1,6 +1,19 @@
 {
-  "name": "@wolfx/express-api-server",
-  "version": "1.0.1",
+  "name": "@wolfx/lightning",
+  "description": "Fast web framework",
+  "author": "wolfx",
+  "version": "1.0.0",
+  "license": "MIT",
+  "main": "index.js",
+  "keywords": [
+    "framework",
+    "web",
+    "router",
+    "api"
+  ],
+  "engines": {
+    "node": ">= 8.0.0"
+  },
   "dependencies": {
     "@types/express": "^4.16.0",
     "@types/multer": "^1.3.7",
@@ -8,8 +21,8 @@
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-flow": "^6.23.0",
-    "babel-preset-latest": "^6.24.1",
     "babel-register": "^6.26.0",
     "body-parser": "latest",
     "express": "^4.16.4",
