--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@wolfx/lightning",
-  "description": "Fast web framework",
+  "description": "fast web framework",
   "author": "wolfx",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "license": "MIT",
   "main": "index.js",
   "keywords": [
@@ -15,19 +15,15 @@
     "node": ">= 8.0.0"
   },
   "dependencies": {
-    "@types/express": "^4.16.0",
-    "@types/multer": "^1.3.7",
     "@wolfx/nodebatis": "^2.3.4",
-    "babel-plugin-syntax-async-functions": "^6.13.0",
-    "babel-plugin-transform-regenerator": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-flow": "^6.23.0",
-    "babel-register": "^6.26.0",
     "body-parser": "latest",
     "express": "^4.16.4",
     "express-cors": "0.0.3",
-    "multer": "^1.4.1",
+    "multer": "^1.4.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.16.0",
+    "@types/multer": "^1.3.7",
     "mysql": "^2.16.0",
     "svg-captcha": "^1.3.11"
   }
