--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@wolfx/lightning",
   "description": "fast web framework",
   "author": "wolfx",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "license": "MIT",
   "main": "index.js",
   "keywords": [
@@ -15,7 +15,7 @@
     "node": ">= 8.0.0"
   },
   "dependencies": {
-    "@wolfx/nodebatis": "^2.3.4",
+    "@wolfx/nodebatis-lite": "^1.0.1",
     "body-parser": "latest",
     "express": "^4.16.4",
     "express-cors": "0.0.3",
@@ -25,6 +25,6 @@
     "@types/express": "^4.16.0",
     "@types/multer": "^1.3.7",
     "mysql": "^2.16.0",
-    "svg-captcha": "^1.3.11"
+    "prettier": "^1.16.4"
   }
 }
