--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "@wolfx/lightning",
   "description": "fast web framework",
   "author": "wolfx",
-  "version": "1.2.8",
+  "version": "1.2.9",
   "license": "MIT",
   "main": "index.js",
+  "typings": "types/index.d.ts",
   "keywords": [
     "framework",
     "web",
