--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@wolfx/lightning",
   "description": "fast web framework",
   "author": "wolfx",
-  "version": "1.2.13",
+  "version": "1.2.14",
   "license": "MIT",
   "main": "index.js",
   "typings": "types/lightning.d.ts",
@@ -20,6 +20,7 @@
     "@types/multer": "^1.3.7",
     "@wolfx/nodebatis-lite": "^1.2.1",
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
     "express-cors": "0.0.3",
     "multer": "^1.4.1"
