--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@wolfx/lightning",
   "description": "fast web framework",
   "author": "wolfx",
-  "version": "1.2.14",
+  "version": "1.3.0",
   "license": "MIT",
   "main": "index.js",
   "typings": "types/lightning.d.ts",
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "mysql": "^2.16.0",
+    "nodejs-websocket": "^1.7.2",
     "prettier": "^1.16.4"
   }
 }
