--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@wolfx/lightning",
   "description": "fast web framework",
   "author": "wolfx",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "license": "MIT",
   "main": "index.js",
   "typings": "types/lightning.d.ts",
@@ -22,6 +22,7 @@
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
     "express-cors": "0.0.3",
+    "lodash": "^4.17.14",
     "multer": "^1.4.1"
   },
   "devDependencies": {
