--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@wolfx/lightning",
   "description": "fast web framework",
   "author": "wolfx",
-  "version": "3.0.9",
+  "version": "3.0.10",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "src/index.ts",
@@ -21,7 +21,7 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
-    "express-cors": "0.0.3",
+    "cors": "^2.8.5",
     "lodash": "^4.17.14",
     "multer": "^1.4.1"
   },
