--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@wolfx/lightning",
   "description": "fast web framework",
   "author": "wolfx",
-  "version": "3.0.11",
+  "version": "3.1.0",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "src/index.ts",
@@ -19,9 +19,10 @@
     "@types/express": "^4.16.0",
     "@types/multer": "^1.3.7",
     "body-parser": "^1.18.3",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
-    "express": "^4.16.4",
     "cors": "^2.8.5",
+    "express": "^4.16.4",
     "lodash": "^4.17.14",
     "multer": "^1.4.1"
   },
