--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@wolfx/lightning",
   "description": "fast web framework",
   "author": "wolfx",
-  "version": "3.1.1",
+  "version": "3.1.3",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "src/index.ts",
@@ -15,9 +15,17 @@
   "engines": {
     "node": ">= 8.0.0"
   },
+  "scripts": {
+    "build": "tsc --watch"
+  },
   "dependencies": {
     "@types/express": "^4.16.0",
     "@types/multer": "^1.3.7",
+    "@types/compression": "^1.0.1",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.6",
+    "@types/lodash": "^4.14.149",
+    "@types/node": "^12.7.2",
     "body-parser": "^1.18.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
@@ -27,7 +35,6 @@
     "multer": "^1.4.1"
   },
   "devDependencies": {
-    "@types/node": "^12.7.2",
     "nodejs-websocket": "^1.7.2",
     "prettier": "^1.16.4",
     "typescript": "^3.5.3"
