--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@wolfx/lightning",
   "description": "fast web framework",
   "author": "wolfx",
-  "version": "3.1.3",
+  "version": "3.2.0",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "src/index.ts",
@@ -19,13 +19,14 @@
     "build": "tsc --watch"
   },
   "dependencies": {
-    "@types/express": "^4.16.0",
-    "@types/multer": "^1.3.7",
     "@types/compression": "^1.0.1",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
+    "@types/express": "^4.16.0",
     "@types/lodash": "^4.14.149",
+    "@types/multer": "^1.3.7",
     "@types/node": "^12.7.2",
+    "axios": "^0.19.0",
     "body-parser": "^1.18.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
