--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "@wolfx/lightning",
   "description": "fast web framework",
   "author": "wolfx",
-  "version": "3.2.2",
+  "version": "4.0.0",
   "license": "MIT",
-  "main": "dist/index.js",
+  "main": "src/index.ts",
   "typings": "src/index.ts",
   "keywords": [
     "framework",
@@ -36,7 +36,6 @@
     "multer": "^1.4.1"
   },
   "devDependencies": {
-    "nodejs-websocket": "^1.7.2",
     "prettier": "^1.16.4",
     "typescript": "^3.5.3"
   }
