--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "@wolfx/lightning",
   "description": "fast web framework",
   "author": "wolfx",
-  "version": "4.0.0",
+  "version": "4.0.2",
   "license": "MIT",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "typings": "src/index.ts",
   "keywords": [
     "framework",
