--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@wolfx/lightning",
   "description": "fast web framework",
   "author": "wolfx",
-  "version": "4.1.1",
+  "version": "5.0.0",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "src/index.ts",
@@ -16,24 +16,18 @@
     "node": ">= 8.0.0"
   },
   "scripts": {
-    "build": "tsc --watch"
+    "build": "tsc --watch",
+    "test-http": "ts-node ./src/http/Server.test.ts"
   },
   "dependencies": {
-    "@types/compression": "^1.0.1",
     "@types/cookie-parser": "^1.4.2",
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.16.0",
-    "@types/multer": "^1.3.7",
+    "@types/formidable": "^1.0.31",
     "@types/node": "^12.7.2",
-    "body-parser": "^1.18.3",
-    "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
-    "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "multer": "^1.4.1"
+    "formidable": "^1.2.2"
   },
   "devDependencies": {
     "prettier": "^1.16.4",
-    "typescript": "^3.5.3"
+    "typescript": "^3.9.7"
   }
 }
