--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@wolfx/lightning",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
   "description": "fast web framework",
   "author": "wolfx",
-  "version": "5.0.0",
+  "version": "5.0.3",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "src/index.ts",
