--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "experimentalDecorators": true,
     "module": "commonjs",
     "target": "es2015",
+    "strict": true,
     "noImplicitAny": true,
     "moduleResolution": "node",
     "removeComments": true,
